data/derived/sp14/progs/unify/prog2862.ml.out
Characters 57-71:
  |h::t -> listReverse(t) :: l;;
           ^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
